src/objects/CIMConnection__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Connection info for CIM.</description>
    <fields>
        <fullName>CIMPassword__c</fullName>
        <label>CIMPassword</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIMUrl__c</fullName>
        <label>CIMUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIMUserId__c</fullName>
        <label>CIMUserId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>CIMConnection</label>
</CustomObject>